--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plane Fly (Skeleton)</title>
+    <title>Plane Fly (Pretty Scene)</title>
     <link rel="stylesheet" href="./style.css" />
+
+    <!-- Чтобы можно было импортировать GLTFLoader/OrbitControls из three/addons -->
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="hud">
       <div class="hud-title">Время в игре</div>
       <div id="timer" class="hud-timer">00:00</div>
       <div class="hud-hint">
-        Управление:<br />
         W/A/S/D — летать<br />
         Q/E — вверх/вниз<br />
         Shift — ускорение
@@ -19,7 +28,6 @@
     </div>
 
     <canvas id="game"></canvas>
-
     <script type="module" src="./main.js"></script>
   </body>
 </html>
