--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     </div>
 
     <canvas id="game"></canvas>
-    <script type="module" src="./main.js?v=2"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
