--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Plane Fly (Pretty Scene)</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Plane Fly</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -18,6 +18,8 @@
     </div>
 
     <canvas id="game"></canvas>
-    <script type="module" src="./game.js?v=999"></script>
+
+    <!-- ВАЖНО: подключаем game.js, а не main.js -->
+    <script type="module" src="./game.js?v=1000"></script>
   </body>
 </html>
